Finish Post Test 3

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
   <main>
     <section id="hero">
       <h2>Temukan Informasi Bahan Kecantikan Favoritmu</h2>
-      <p>Perawatan kulit kini menjadi salah satu langkah penting dalam menjaga penampilan dan kesehatan wajah. Skincare tidak hanya berguna untuk melembapkan kulit, tetapi juga membantu meredakan jerawat, menyamarkan noda, serta memperlambat munculnya tanda penuaan. Dengan memahami kandungan skincare, kamu bisa memilih produk yang sesuai dengan kebutuhan kulitmu.</p>
+      <p class="hero-text">
+        Perawatan kulit kini menjadi salah satu langkah penting dalam menjaga penampilan dan kesehatan wajah. Skincare tidak hanya berguna untuk melembapkan kulit, tetapi juga membantu meredakan jerawat, menyamarkan noda, serta memperlambat munculnya tanda penuaan. Dengan memahami kandungan skincare, kamu bisa memilih produk yang sesuai dengan kebutuhan kulitmu.
+      </p>
       <a href="#ingredients" class="btn btn-primary">Lihat Bahan</a>
     </section>
 
@@ -95,5 +97,6 @@
     <p>Referensi desain: <a href="https://incidecoder.com" target="_blank">Incidecoder</a></p>
   </footer>
 
+  <script src="script.js"></script>
 </body>
 </html>
